problemas con los estilos

--- a/Repaso de JavaScript/desktop.ini
+++ b/Repaso de JavaScript/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\campi\Documents\Curso de React\Repaso de JavaSript\JavaScript.ico,0
+IconResource=C:\Users\campi\Documents\Curso de React\Repaso de JavaScript\JavaScript.ico,0
 [ViewState]
 Mode=
 Vid=
